Fix dark mode

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -1,9 +1,5 @@
-
-background {
-    color: rgb(39, 39, 39);
-}
-
 p {
     margin-right: 5%;
     color: white;
+    background-color: rgb(39, 39, 39);
 }
